changes small names

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,8 @@
             <span>Powered by <a href="http://jekyllrb.com/">Jekyll</a></span>
         </small>
         <div class="ftr-links">
-          <a href="https://github.com/nicoelayda"><i class="fa fa-github-alt"></i></a>
-          <a href="https://twitter.com/nicoelayda"><i class="fa fa-twitter"></i></a>
+          <a href="https://github.com/DonsetPG"><i class="fa fa-github-alt"></i></a>
+          <a href="https://www.linkedin.com/in/paul-garnier-6b7481149/"><i class="fa fa-linkedin"></i></a>
         </div>
       </footer>
     </div>
