test landing page

--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -9,3 +9,21 @@
     border-bottom: 1px solid #c0c0c0;
     padding-bottom: 0.7rem;
 }
+
+.landing-projects {
+    color: $post-title-color;
+    border-bottom: 1px solid #c0c0c0;
+    padding-bottom: 0.7rem;
+}
+
+.landing-articles {
+    color: $post-title-color;
+    border-bottom: 1px solid #c0c0c0;
+    padding-bottom: 0.7rem;
+}
+
+.last-articles {
+    color: $post-title-color;
+    border-bottom: 1px solid #c0c0c0;
+    padding-bottom: 0.7rem;
+}
