Add narya links and docs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
         <li class="logo"><a class="hvr-ripple-out" href="{{ site.baseurl }}/">C</a></li>
         <li class="hvr-underline-reveal"><a href="{{ site.baseurl }}/about/">About</a></li>
         <li class="hvr-underline-reveal"><a href="{{ site.baseurl }}/blog/">Blog</a></li>
-        <li class="hvr-underline-reveal"><a href="https://naryafootball.com/">Narya - Live</a></li>
+        <li class="hvr-underline-reveal"><a href="https://footballtracking.app/">Narya - Live</a></li>
         <li class="hvr-underline-reveal"><a href="{{ site.baseurl }}/naryaDoc/index.html">Narya - Documentation</a></li>
       </ul>
     </nav>
