feat: new version

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,11 @@
   <body>
     <nav class="nav-main">
       <ul>
-        <li class="logo"><a class="hvr-ripple-out" href="{{ site.baseurl }}/">C</a></li>
-        <li class="hvr-underline-reveal"><a href="{{ site.baseurl }}/about/">About</a></li>
+        <li class="logo"><a class="hvr-ripple-out" href="{{ site.baseurl }}/">PG</a></li>
+        <li class="hvr-underline-reveal"><a href="https://github.com/DonsetPG">Git</a></li>
         <li class="hvr-underline-reveal"><a href="{{ site.baseurl }}/blog/">Blog</a></li>
-        <li class="hvr-underline-reveal"><a href="https://www.footballtracking.app">Narya - Live</a></li>
+        <li class="hvr-underline-reveal"><a href="https://twitter.com/Paul_Grn">Twitter</a></li>
+        <li class="hvr-underline-reveal"><a href="mailto: paul.garnier.97@gmail.com">Email</a></li>
         <li class="hvr-underline-reveal"><a href="{{ site.baseurl }}/naryaDoc/index.html">Narya - Documentation</a></li>
       </ul>
     </nav>
