fix: wrong twitter fa

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
         <li class="logo"><a class="hvr-ripple-out" href="{{ site.baseurl }}/">PG</a></li>
         <li class="hvr-underline-reveal"><a href="{{ site.baseurl }}/blog/">Blog</a></li>
         <li class="hvr-underline-reveal"><a href="https://github.com/DonsetPG"><i class="fa fa-github-alt"></i></a></li>
-        <li class="hvr-underline-reveal"><a href="https://twitter.com/Paul_Grn"><i class="fa fa-twitter-alt"></i></a></li>
-        <li class="hvr-underline-reveal"><a href="mailto: paul.garnier.97@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
+        <li class="hvr-underline-reveal"><a href="https://twitter.com/Paul_Grn"><i class="fa-brands fa-twitter"></i></a></li>
+        <li class="hvr-underline-reveal"><a href="mailto: paul.garnier.97@gmail.com">Mail</a></li>
       </ul>
     </nav>
 
