--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -7,7 +7,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
   font-weight: bold;
   line-height: 1.25;
-  color: #313131;
+  color: #0a0a0a;
   text-rendering: optimizeLegibility;
 }
 
@@ -36,7 +36,7 @@ p {
 }
 
 strong {
-  color: #303030;
+  color: #0a0a0a;
 }
 
 ul, ol, dl {
